# CSIT-Studying

./: .gitignore  .gitmodules  README.md
2sem/Informatics and Programming 2sem/: rebuild.sh
2sem/Informatics and Programming 2sem/Algorithms/: task2.cpp
2sem/Informatics and Programming 2sem/Dynamic structures of data/Stacks and queues/: task5-3.cpp
2sem/Informatics and Programming 2sem/Encryption/: task9-1.cpp
2sem/Informatics and Programming 2sem/Sorts/Sorting of data/: task3-8.cpp  unsorted_employees.txt
2sem/Informatics and Programming 2sem/Sorts/Timsort/: input.txt  timsort.cpp
2sem/Informatics and Programming 2sem/Working with STL/Set and map/: task2-1.cpp  task2-2.cpp
2sem/Informatics and Programming 2sem/Working with STL/Vector, deque or list/: task1-1.cpp  task1-2.cpp  task1-3.cpp
2sem/Informatics and Programming 2sem/Working with graphs/: task8-2.cpp  task8-3.cpp
2sem/Informatics and Programming 2sem/Working with trees/: RBtree.cpp  mathTree.cpp  task7-3.cpp
2sem/MIT/Creating text structure in LaTeX/: book.tex
3sem/ASM/: Лекция 1 от 17.09.25.md
3sem/ASM/Labs/Lab1/Code/: prim1.asm  prim2.asm  prim3.asm  start.sh
3sem/ASM/Labs/Lab1/Report/: main.typ
3sem/ASM/Labs/Lab1/Report/static/: table1.csv  table2.csv  table3.csv
3sem/ASM/Labs/Lab2/Code/: 1.asm  2.asm
3sem/ASM/Labs/Lab2/Report/: main.typ
3sem/ASM/Labs/Lab3/Code/: 1.asm  2.asm
3sem/ASM/Labs/Lab3/Report/: main.typ  typst.toml
3sem/ASM/Labs/Lab4/: 1.asm
3sem/ASM/Labs/Lab4/Code/: 1.asm
3sem/ASM/Labs/Lab4/Report/: main.typ
3sem/ASM/Labs/Lab5/Code/: 1.asm
3sem/ASM/Labs/Lab5/Report/: main.typ
3sem/ASM/Labs/Lab6/Code/: 1.asm
3sem/ASM/Labs/Lab6/Report/: main.typ
3sem/ASM/Labs/Lab8/: 1.asm
3sem/ASM/Labs/Lab8/Report/: main.typ
3sem/ASM/Lections/: Лекция 1 от 17.09.25.md  Лекция 2 от 19.09.25.md  Лекция 3 от 24.09.25.md  Лекция 4 от 01.10.25.md  Лекция 5 от 03.10.2025.md
3sem/OOP/task1/: 19_Arkhipov_251.cpp  main.cpp
3sem/OOP/task2/: main.cpp
3sem/OOP/task3/: CMakeLists.txt  complexNumber.cpp  complexNumber.h  error.cpp  error.h  list.cpp  list.h  main.cpp
3sem/OOP/task4/: CMakeLists.txt  build-linux.sh  build-windows.sh  mingw.cmake
3sem/OOP/task4/src/: Car.cpp  Car.h  Road.cpp  Road.h  constants.h  main.cpp  resourcesControl.cpp  resourcesControl.h
3sem/Английский/: Лекция 1.md  Лекция 2.md  Лекция 4.md  Лекция 5.md  Лекция_1.md  Лекция_10.md  Лекция_11.md  Лекция_12.md  Лекция_13.md  Лекция_14.md  Лекция_2.md  Лекция_3.md  Лекция_4.md  Лекция_6.md  Лекция_7.md  Лекция_8.md  Лекция_9.md
3sem/Английский/homeworks/: 1.typ  2.typ
3sem/ОБЖ/: Untitled.md  asd.md  БЖ_1.md  БЖ_2.md  Лекция 3.md
3sem/ОБЖ/referat/: conf.typ  main.bib  main.typ  main2.typ
4sem/ACA/Sorts/: LSD_sort.cpp  analysis.typ  analysis2.typ  benchmark.txt  counting_sort.cpp  merge_sort.cpp  pyramid_sort.cpp  quick_sort.cpp  tester.cpp  tester.hpp
4sem/ACA/Sorts/Report/: conf.typ  main.typ
4sem/ACA/Strings/: boyer_moure.cpp  boyer_moure_analysis.typ  strings_analysis.typ
4sem/ACA/Trees/: avltree_analysis.typ  bst_analysis.typ  rbtree_analysis.typ
4sem/Graphics/: CMakeLists.txt  maker.sh
4sem/Graphics/Projects/lab1/: main.cpp
4sem/Graphics/Projects/lab2/: hare.hpp  main.cpp
4sem/Graphics/Projects/lab3/: figure.hpp  hare.hpp  main.cpp  transform.hpp
4sem/Graphics/Projects/lab4/: CMakeLists.txt  Geometric.txt  a.txt  clip.cpp  figure.hpp  hare.hpp  hare.txt  main.cpp  matrix.hpp  screen.hpp  transform.hpp
4sem/Graphics/Projects/lab6/: Geometric.txt  Geometric3D-1.txt  Geometric3D-2.txt  Geometric3D.txt  clip.hpp  figure.hpp  main.cpp  matrix.hpp  screen.hpp  transform.hpp
Informatics and Programming 2sem/: rebuild.sh
Informatics and Programming 2sem/Algorithms/: task1.cpp  task3.cpp  task4.cpp
Informatics and Programming 2sem/Dynamic structures of data/: extraTask1.cpp  extraTask2.cpp  knightProblem.cpp
Informatics and Programming 2sem/Dynamic structures of data/Lists/: task6-1.cpp  task6-2.cpp  task6-3.cpp
Informatics and Programming 2sem/Dynamic structures of data/Stacks and queues/: task5-1.cpp  task5-2.cpp  task5-4.cpp
Informatics and Programming 2sem/Encryption/: task9-1.cpp  task9-2.cpp  unsorted_employees.txt
Informatics and Programming 2sem/Sorts/Sorting of arrays/: task4-1.cpp  task4-3.cpp  task4-8.cpp
Informatics and Programming 2sem/Sorts/Sorting of data/: task3-1.cpp  task3-12.cpp  task3-2.cpp
Informatics and Programming 2sem/Sorts/Timsort/: output.txt  timsort.cpp
Informatics and Programming 2sem/Working with STL/Hangman/: hangman.cpp
Informatics and Programming 2sem/Working with STL/Set and map/: task2-3.cpp
Informatics and Programming 2sem/Working with graphs/: extraTask.cpp  input.txt  task8-1.cpp  task8-4.cpp  task8-5.cpp
Informatics and Programming 2sem/Working with trees/: AVLtree.cpp  task1.cpp  task7-1.cpp  task7-2.cpp  task7-3.cpp
MIT/Creating text structure in LaTeX/: 005.txt  30.tex  31.tex  32.tex  33.tex  34.tex  article.tex
MIT/Formulas in LaTeX/: formulas.tex
(+3 files in other folders)
